# 2048

./: .gitignore  .gitmodules  CMakeLists.txt  build-and-run.sh  build.sh
lib/: CMakeLists.txt
res/shader/: vulkan.frag  vulkan.vert
src/: CMakeLists.txt  game-initializer.cpp  game-initializer.h  game-loop.cpp  game-loop.h  main.cpp
src/board/: board-manager.cpp  board-manager.h
src/main/: CMakeLists.txt
src/main/domains/: game-domain.cpp  game-domain.h
src/main/state-machine/: app-state-machine.cpp  app-state-machine.h
src/main/state-machine/states/: game-state.cpp  game-state.h  main-menu-state.cpp  main-menu-state.h  menu-state.cpp  menu-state.h
src/state-machine/: app-state-machine.cpp  app-state-machine.h  game-state-machine.cpp  game-state-machine.h  state.h
src/state-machine/states/: boot-state.cpp  boot-state.h  game-state.cpp  game-state.h  main-menu-state.cpp  main-menu-state.h  menu-state.cpp  menu-state.h
